--- a/project-pixel-art-maker-starter-master/index.html
+++ b/project-pixel-art-maker-starter-master/index.html
@@ -18,6 +18,7 @@
         <input type="number" id="inputWeight" name="width" min="1" value="1">
         <input type="button" id="inputButton" value="Submit">
     </form>
+<!--     <button id="try">Try</button> -->    
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
